# efficient-serving-system

./: .README.md.swp  .gitignore  CMakeLists.txt  Dockerfile  InstallGuide  README.md  infer.cpp  infer_trt.cpp  server.cpp  start_mps.sh  stop_mps.sh
include/: IPManager.cc  IPManager.cpp  IPManager.h  TRTengine.cc  TRTengine.h  consolelog.hpp  imageutils.cc  imageutils.h
model_dir/: config_tcpp.txt  config_trt.txt  convert.py  onnx_convert.py
profiled_data/: CMakeLists.txt  main.cpp  process.py  profiler.txt  tcpp_profiler.cpp  trt_profiler.cpp  trt_profiler.txt
src/: IPManager.cpp  TRTengine.cpp  infer.cpp  infer_trt.cpp  server.cpp
test_client/: async_client.py  client.py
test_tensorrt/: onnx_convert.py
